[tool.poetry]
name = "gbzr-backend-fastapi"
version = "0.1.0"
description = ""
authors = ["강석영 <ksge1124@gmail.com>"]
readme = "README.md"
packages = [{include = "gbzr_backend_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
